Version 3.0.2
* Post DiFX-2.0.1
* Improved reporting when weights go crazy (negative)
* --zero (or -0) option: don't write visibilities
  - not useful for AIPS as AIPS requires a UV table
* makefits: pass along non-dashed options to difx2fits
* Do better job verifying baseband data files have compliant names.
* Improved checking on fopen return values
* Maximum number of file descriptors checked.  For large merges this can be a problem.
* Multiple DIFX files per job: don't write records from later files that overlap in time with those written by earlier ones.
  - perhaps later the order of things should change and the _newer_ records get kept.
  - multiple SWITCHEDPOWER and PCAL files are handled in the same way
* Make use of new difx_tcal infrastructure
* Support DiFX job restarts
* Better support for mixed 1 and 2 bit data: include antenna-based numbers in FITS and scale accordingly

Version 3.0.1
* Post 2.0.0
* Make use of clock shifting function in difxio
* Add in Difx-based pulse cal data
* Add in Difx-based tsys
* Fix TSys values in the zoom band cases
* Fix Pulse cal values in the zoom band cases
* DiFX extracted pulse cals: ensure proper antennaIds for merged job cases
* valgrind used to track down some memory leaks
* print fits keywords for each fits file when -v is supplied
* don't invoke sniffer in cases where it would use too much memory
* don't overwrite FITS when parse-all input difx are from different vex setups (thanks Jan Wagner)
* Version for DiFX-2.0.1, 10 June 2011

Version 3.0
* Includes the following merged changes from DiFX-1.5:
  - Copy jobmatrix file
  - rename "makefilts.tmp" to "makefits.tmp"
  - Apply flags properly, even in cases with crazy subarraying
  - Write file that summarizes jobs that went into FITS
  - Pass full command line option structure to UV writing
  - Normalize calling to all table writing functions
  - Properly populate GATEMODL table
  - Write .jobmatrix file
  - Write new WEIGHTYP keyword